<build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.13.0</version>
            <configuration>
                <source>21</source>
                <target>21</target>
                <compilerArgs>
                    <arg>-Xlint:all</arg>
                    <arg>--module-path</arg>
                    <arg>${project.build.directory}/classes</arg>
                </compilerArgs>
            </configuration>
        </plugin>

        <plugin>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-maven-plugin</artifactId>
            <version>0.0.8</version>
            <configuration>
                <mainClass>org.example.jeu.JeuDeTir</mainClass>
                <executable>${java.home}/bin/java</executable>
                <options>
                    <option>--module-path</option>
                    <option>${project.build.directory}/classes</option>
                    <option>--add-modules</option>
                    <option>javafx.controls,javafx.fxml,javafx.media</option>
                </options>
            </configuration>
        </plugin>
    </plugins>
</build>